Agregar estilos a sección nosotros Se agregaron los estilos e iconos a la sección nosotros como las flechas y los textos del diseño

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.4.js"></script>
     <script>
-        jQuery(function($){
+        jQuery(function ($) {
             var $navbar = $('.navigation_top');
-            $(window).scroll(function(event){
+            $(window).scroll(function (event) {
                 var $current = $(this).scrollTop();
-                if($current>0){
+                if ($current > 0) {
                     $navbar.addClass('navigation_top_color');
                 }
-                else{
+                else {
                     $navbar.removeClass('navigation_top_color');
                 }
             });
@@ -70,11 +70,11 @@
                         <div class="wrap">
                             <div class="section1">
                                 <div class="bienvenido">
-                                    <div>
-                                        <p>----------</p>
+                                    <div class="side-line">
+                                        <p>------</p>
                                     </div>
                                     <div>
-                                        <h4>nosotros</h4>
+                                        <h6>nosotros</h6>
                                     </div>
                                 </div>
                                 <div class="bienvenido2">
@@ -87,14 +87,15 @@
                                 </div>
                                 <div class="bienvenido3">
                                     <p>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum facere officiis
-                                        nisi
-                                        sequi odit assumenda unde quia aspernatur nemo voluptatem? Nostrum, dolore!
-                                        Consectetur accusamus vero aspernatur expedita dolorum ipsam tempore?
+                                        ¿Estás listo para vivir tus mejores momentos?<br>
+                                        En Santa Lucía los tenemos reservados para ti. <br>
+                                        ya que somos el nuevo mejor proyecto en Hermosillo que <br>
+                                        te garantiza plusvalía anual y tiene #TodoLoQueTeGusta
                                     </p>
                                 </div>
                                 <div class="bienvenido4">
-                                    <a href="">Contactar a un asesor --></a>
+                                    <a href="">Contactar a un asesor <div class="arrow"></div> </a>
+
                                 </div>
                             </div>
                             <div class="section2">
@@ -104,13 +105,22 @@
                         <div class="wrap2">
                             <div class="section3">
                                 <div class="hectareas">
-                                    <h2>Hectareas</h2>
+                                    <div class="content">
+                                        <h1>58</h1>
+                                        <h6>hectáreas <br> de superficie</h6>
+                                    </div>
                                 </div>
                                 <div class="minutos">
-                                    <h2>Minutos</h2>
+                                    <div class="content">
+                                        <h1>10</h1>
+                                        <h6>minutos <br> de la ciudad</h6>
+                                    </div>
                                 </div>
                                 <div class="amenidades">
-                                    <h2>Amenidades</h2>
+                                    <div class="content">
+                                        <h1>+5</h1>
+                                        <h6>amenidades <br>para tu disfrute</h6>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -128,20 +138,24 @@
                             </div>
                             <div class="mitad2">
                                 <div class="bienvenido">
-                                    <div>
-                                        <p>----------</p>
+                                    <div class="side-line">
+                                        <p>------</p>
                                     </div>
                                     <div>
-                                        <h3>nosotros</h3>
+                                        <h6>nosotros</h6>
                                     </div>
                                 </div>
-                                <h2>Header</h2>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, illo culpa?
-                                    Minus
-                                    ducimus cupiditate ex iure distinctio nam blanditiis suscipit fuga. Necessitatibus
-                                    provident sapiente iure suscipit delectus voluptatem debitis rerum!</p>
+                                <h2>contamos <br> con una ubicación privilegiada</h2>
+                                <p>
+                                    Nuestra ubicación es sumamente estratégica,
+                                    ya que estamos solo a 10 minutos de Planta
+                                    Ford, lo que te permitirá disfrutar de la
+                                    tranquilidad del campo, pero manteniéndote
+                                    dentro de los márgenes de la ciudad para que
+                                    refreses a tus actividades sin complicaciones.
+                                </p>
                                 <div class="bienvenido4">
-                                    <a href="">Contactar a un asesor --></a>
+                                    <a href="">Contactar a un asesor <div class="arrow"></div></a>
                                 </div>
                             </div>
 
@@ -159,20 +173,21 @@
                         <div class="container">
                             <div class="mitad">
                                 <div class="bienvenido">
-                                    <div>
-                                        <p>----------</p>
+                                    <div class="side-line">
+                                        <p>------</p>
                                     </div>
                                     <div>
-                                        <h3>nosotros</h3>
+                                        <h6>nosotros</h6>
                                     </div>
                                 </div>
-                                <h2>Header</h2>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, illo culpa?
-                                    Minus
-                                    ducimus cupiditate ex iure distinctio nam blanditiis suscipit fuga. Necessitatibus
-                                    provident sapiente iure suscipit delectus voluptatem debitis rerum!</p>
+                                <h2>armonía<br>con la naturaleza</h2>
+                                <p>
+                                    Dentro de nuestras 58 hectáreas podrás disfrutar de increíbles postales desérticas
+                                    que conjugan flora y fauna regional enmarcada por inolvidables atardeceres, que te
+                                    asegurarán las mejores selfies.
+                                </p>
                                 <div class="bienvenido4">
-                                    <a href="">Contactar a un asesor --></a>
+                                    <a href="">Contactar a un asesor <div class="arrow"></div></a>
                                 </div>
                             </div>
                             <div class="mitad2">
