Modificacion primera parte fraccinamiento Se agregaron los iconos y texto para la primera parte de la sección fraccionamiento

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                 <div class="mitad">
                     <div class="container">
                         <div class="encabezado">
-                            <p>-------</p>
-                            <h3>fraccionamiento</h3>
+                            <p class="side-line">------</p>
+                            <h6>fraccionamiento</h6>
                         </div>
                         <div class="texto">
                             <h2>tus sueños,</br></h2>
@@ -217,16 +217,44 @@
                 <div class="mitad2">
                     <div class="container">
                         <div class="ubicacion">
-
+                            <div class="content">
+                                <div class="ubi-icon">
+                                    <img src="assets/icons/UBI@3x.png" alt="">
+                                </div>
+                                <h6>
+                                    Ubicación <br>privilegiada 
+                                </h6>
+                            </div>
                         </div>
-                        <div class="vigilancia">
-
+                        <div class="ubicacion vigilancia">
+                            <div class="content">
+                                <div class="ubi-icon">
+                                    <img src="assets/icons/VIG@3x.png" alt="">
+                                </div>
+                                <h6>
+                                    Vigilancia<br>24/7 
+                                </h6>
+                            </div>
                         </div>
-                        <div class="inversion">
-
+                        <div class="ubicacion inversion">
+                            <div class="content">
+                                <div class="ubi-icon">
+                                    <img src="assets/icons/INV@3x.png" alt="">
+                                </div>
+                                <h6>
+                                    Inversión<br>segura 
+                                </h6>
+                            </div>
                         </div>
-                        <div class="piscina">
-
+                        <div class="ubicacion piscina">
+                            <div class="content">
+                                <div class="ubi-icon">
+                                    <img src="assets/icons/Vector Smart Object@3x.png" alt="">
+                                </div>
+                                <h6>
+                                    Piscina y más<br>amenidades 
+                                </h6>
+                            </div>
                         </div>
 
                     </div>
